[Seller Listing] Fixed stretching product images.
Product images were stretching in the list view, now they have a fixed aspect ratio and are vertically aligned in a better way.

--- a/tec-web/public/css/app.css
+++ b/tec-web/public/css/app.css
@@ -664,9 +664,6 @@ select {
 .order-1 {
   order: 1;
 }
-.order-3 {
-  order: 3;
-}
 .col-span-full {
   grid-column: 1 / -1;
 }
@@ -703,6 +700,10 @@ select {
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+.-mx-2 {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -755,6 +756,9 @@ select {
 .ml-36 {
   margin-left: 9rem;
 }
+.mt-16 {
+  margin-top: 4rem;
+}
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -767,8 +771,11 @@ select {
 .mb-2 {
   margin-bottom: 0.5rem;
 }
-.mt-16 {
-  margin-top: 4rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .block {
   display: block;
@@ -827,6 +834,9 @@ select {
 .max-h-80 {
   max-height: 20rem;
 }
+.max-h-20 {
+  max-height: 5rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -860,6 +870,12 @@ select {
 .w-8 {
   width: 2rem;
 }
+.w-1\/2 {
+  width: 50%;
+}
+.w-32 {
+  width: 8rem;
+}
 .min-w-full {
   min-width: 100%;
 }
@@ -878,8 +894,14 @@ select {
 .max-w-xl {
   max-width: 36rem;
 }
-.max-w-sm {
-  max-width: 24rem;
+.max-w-\[20px\] {
+  max-width: 20px;
+}
+.max-w-\[5rem\] {
+  max-width: 5rem;
+}
+.max-w-\[6rem\] {
+  max-width: 6rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -890,6 +912,12 @@ select {
 .shrink-0 {
   flex-shrink: 0;
 }
+.shrink {
+  flex-shrink: 1;
+}
+.grow-0 {
+  flex-grow: 0;
+}
 .origin-top-left {
   transform-origin: top left;
 }
@@ -898,6 +926,14 @@ select {
 }
 .origin-top-right {
   transform-origin: top right;
+}
+.translate-x-3\/4 {
+  --tw-translate-x: 75%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-95 {
   --tw-scale-x: .95;
@@ -914,6 +950,9 @@ select {
 }
 .cursor-default {
   cursor: default;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .list-inside {
   list-style-position: inside;
@@ -945,6 +984,9 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
+.items-end {
+  align-items: flex-end;
+}
 .items-center {
   align-items: center;
 }
@@ -968,9 +1010,6 @@ select {
 }
 .gap-8 {
   gap: 2rem;
-}
-.gap-6 {
-  gap: 1.5rem;
 }
 .gap-x-8 {
   -moz-column-gap: 2rem;
@@ -1010,6 +1049,9 @@ select {
 .overflow-x-auto {
   overflow-x: auto;
 }
+.overflow-y-auto {
+  overflow-y: auto;
+}
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -1029,9 +1071,6 @@ select {
 }
 .rounded-full {
   border-radius: 9999px;
-}
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -1193,10 +1232,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-blue-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-}
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1209,6 +1244,10 @@ select {
 }
 .fill-current {
   fill: currentColor;
+}
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .object-cover {
   -o-object-fit: cover;
@@ -1283,6 +1322,10 @@ select {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1479,9 +1522,13 @@ select {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
-.text-blue-600 {
+.text-blue-500 {
   --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1623,10 +1670,6 @@ select {
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.hover\:bg-blue-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -1792,6 +1835,18 @@ select {
 .disabled\:opacity-25:disabled {
   opacity: 0.25;
 }
+.peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.peer:-ms-input-placeholder ~ .peer-placeholder-shown\:text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.peer:placeholder-shown ~ .peer-placeholder-shown\:text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
 @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
@@ -1825,10 +1880,6 @@ select {
   }
 }
 @media (min-width: 640px) {
-
-  .sm\:order-2 {
-    order: 2;
-  }
 
   .sm\:m-4 {
     margin: 1rem;
@@ -2045,6 +2096,11 @@ select {
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .lg\:pt-4 {
